--- a/QL_CDC-master/QL_CDC/Views/Admin/ChartTheoLoai.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Admin/ChartTheoLoai.cshtml
@@ -53,7 +53,7 @@
                         }
                     },
                     series: [{
-                        name: 'Brands',
+                        name: ' ',
                         colorByPoint: true,
                         data: [{
                             name: 'Đồ dùng cá nhân',
