--- a/QL_CDC-master/QL_CDC/Views/HoaDon/DanhSachHoaDonNguoiMua.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/HoaDon/DanhSachHoaDonNguoiMua.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<HoaDonModel> 
 @{
     ViewData["Title"] = "DanhSachHoaDonNguoiMua";
-    Layout = "~/Views/Shared/_ThirdLayout.cshtml";
+    Layout = "_ThirdLayout";
 }
-
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <div class="text-center mb-4">
     <h2 class="section-title px-5"><span class="px-2">Hóa đơn đã đặt</span></h2>
 </div>
