--- a/QL_CDC-master/QL_CDC/Views/SanPham/DoHocTap.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/DoHocTap.cshtml
@@ -22,13 +22,13 @@
                     <img src="~/template/img/slide1.webp" alt="Thiết kế 1">
                 </div>
                 <div class="item">
-                    <img src="~/template/img/slide1.webp" alt="Thiết kế 2">
+                    <img src="~/template/img/ban2.png" alt="Thiết kế 2">
                 </div>
                 <div class="item">
-                    <img src="~/template/img/slide1.webp" alt="Thiết kế 3">
+                    <img src="~/template/img/ban3.png" alt="Thiết kế 3">
                 </div>
                 <div class="item">
-                    <img src="~/template/img/slide1.webp" alt="Thiết kế 4">
+                    <img src="~/template/img/fhf (1).png" alt="Thiết kế 4">
                 </div>
             </div> <a class="left carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a> <a class="right carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
         </div>
