--- a/QL_CDC-master/QL_CDC/Views/SanPham/Index.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/Index.cshtml
@@ -22,13 +22,13 @@
                     <img src="~/template/img/slide1.webp" alt="Thiết kế 1">
                 </div>
                 <div class="item">
-                    <img src="~/template/img/slide1.webp" alt="Thiết kế 2">
+                    <img src="~/template/img/ban2.png" alt="Thiết kế 2">
                 </div>
                 <div class="item">
-                    <img src="~/template/img/slide1.webp" alt="Thiết kế 3">
+                    <img src="~/template/img/ban3.png" alt="Thiết kế 3">
                 </div>
                 <div class="item">
-                    <img src="~/template/img/slide1.webp" alt="Thiết kế 4">
+                    <img src="~/template/img/fhf (1).png" alt="Thiết kế 4">
                 </div>
             </div> <a class="left carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a> <a class="right carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
         </div>
@@ -102,19 +102,18 @@
     </div>
     <br />
     <div>
-        <h4 style="margin-left:12px"><label>Bài đăng dành cho bạn</label></h4>
+        <h4 style="margin-left:12px"><label>Khám phá sản phẩm </label></h4>
     </div>
     <div class="row px-xl-5 pb-3">
         @if (Model.Count() > 0)
         {
-
 @foreach (var item in Model)
 {
     string dongia = string.Format("{0:#,##0.########}", item.dongiasp);
     string giagoc = string.Format("{0:#,##0.########}", item.giagocsp);
     var sosao = Math.Round(item.danhgiasp, 0, MidpointRounding.AwayFromZero);
 <div class="col-lg-3 col-md-6 col-sm-12 pb-1" style="margin: 0px">
-    <div class="card product-item mb-4 item" style="width: 105%">
+    <div class="card product-item mb-4 " style="width: 105%">
         <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
             <div style="width: 100%; display: flex;">
                 <div class="tagthoigian">@item.thoigiansp tháng</div>
@@ -141,8 +140,6 @@ else
 </div>}}
     </div>
 
-    <div id="load"> <b> Load More </b></div>
-
 </div>
 <!-- Products End -->
 <!-- build:js assets/vendor/js/core.js -->
@@ -161,16 +158,11 @@ else
 <script src="/template/lib/easing/easing.min.js"></script>
 <script src="/template/lib/owlcarousel/owl.carousel.min.js"></script>
 
-@*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="js/jquery-1.11.1.min.js"></script>*@
-
+<script src="js/jquery-1.11.1.min.js"></script>
 
 <script>
-    //$(document).ready(function () {
-    //    HienSP();
-    //})
-
     $('#myCarousel').carousel({
         interval: 2500
     });
