--- a/QL_CDC-master/QL_CDC/Views/SanPham/TimKiem.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/TimKiem.cshtml
@@ -7,48 +7,73 @@
 <div id="alertdiv"></div>
 <!-- Products Start -->
 <div class="container-fluid pt-5" style=" margin-top: -50px; margin-left: 0px">
-    <div class="text-center mb-4">
-        <h3 class="section-title px-5"><span class="px-2">Sản phẩm bạn tìm</span></h3>
+    <div class="container" style="width:100%">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="~/template/img/slide1.webp" alt="Thiết kế 1">
+                </div>
+                <div class="item">
+                    <img src="~/template/img/slide1.webp" alt="Thiết kế 2">
+                </div>
+                <div class="item">
+                    <img src="~/template/img/slide1.webp" alt="Thiết kế 3">
+                </div>
+                <div class="item">
+                    <img src="~/template/img/slide1.webp" alt="Thiết kế 4">
+                </div>
+            </div> <a class="left carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a> <a class="right carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
+        </div>
+    </div>
+    
+    <br />
+    <div>
+        <h4 style="margin-left:12px"><label>Bài đăng bạn tìm kiếm</label></h4>
     </div>
     <div class="row px-xl-5 pb-3">
         @if (Model.Count() > 0)
         {
-            @foreach (var item in Model)
-            {
-                string dongia = string.Format("{0:#,##0.########}", item.dongiasp);
-                string giagoc = string.Format("{0:#,##0.########}", item.giagocsp);
-                var sosao = Math.Round(item.danhgiasp, 0, MidpointRounding.AwayFromZero);
-                <div class="col-lg-3 col-md-6 col-sm-12 pb-1" style="margin: 0px">
-                    <div class="card product-item mb-4 sanpham" style="width: 105%">
-                        <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                            <div style="width: 100%; display: flex;">
-                                <div class="tagthoigian">@item.thoigiansp tháng</div>
-                                <div class="tagthoigian">@sosao <i class="fa fa-star" style="color: white;"></i></div>
-                            </div>
-                            <img class="img-fluid w-100" src="@item.anhsp[0]" alt="">
-                        </div>
-                        <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                            <h6 class="text-truncate mb-3">@item.tensp </h6>
-                            <div class="d-flex justify-content-center">
-                                @if (item.giagocsp == item.dongiasp)
-                                {
-                                    <h6>@dongia Đ</h6>
-                                }
-                                else
-                                {
-                                    <h6>@dongia Đ</h6><h6 class="text-muted ml-2"><del>@giagoc Đ</del></h6>
-                                }
-                            </div>
-                        </div>
-                        <div class="card-footer d-flex justify-content-between bg-light border">
-                            <a asp-action="ChiTietSanPham" asp-controller="SanPham" asp-route-id="@item.masp" class="btn btn-sm text-dark p-0 tuychon"><i class="fas fa-eye text-primary mr-1"></i>Chi tiết</a>
-                            <a onclick="Them1VaoGio('@item.masp')" class="btn btn-sm text-dark p-0 tuychon"><i class="fas fa-shopping-cart text-primary mr-1"></i></a>
-                        </div>
-                    </div>
-                </div>
-            }
-        }
+
+@foreach (var item in Model)
+{
+    string dongia = string.Format("{0:#,##0.########}", item.dongiasp);
+    string giagoc = string.Format("{0:#,##0.########}", item.giagocsp);
+    var sosao = Math.Round(item.danhgiasp, 0, MidpointRounding.AwayFromZero);
+<div class="col-lg-3 col-md-6 col-sm-12 pb-1" style="margin: 0px">
+    <div class="card product-item mb-4 item" style="width: 105%">
+        <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
+            <div style="width: 100%; display: flex;">
+                <div class="tagthoigian">@item.thoigiansp tháng</div>
+                <div class="tagthoigian">@sosao <i class="fa fa-star" style="color: white;"></i></div>
+            </div>
+            <img class="img-fluid w-100" src="@item.anhsp[0]" alt="">
+        </div>
+        <div class="card-body border-left border-right text-center p-0 pt-2 pb-1">
+            <h6 class="text-truncate mb-3"> <b>@item.tensp</b> </h6>
+            <div class="d-flex justify-content-center">
+                @if (item.giagocsp == item.dongiasp)
+                {
+<h6><b>@dongia</b> </h6> }
+else
+{
+<h6><b>@dongia</b> </h6><h6 class="text-muted ml-2"><del>@giagoc </del></h6>}
+            </div>
+        </div>
+        <div class="card-footer d-flex justify-content-between bg-light border">
+            <a asp-action="ChiTietSanPham" asp-controller="SanPham" asp-route-id="@item.masp" class="btn btn-sm text-dark p-0 tuychon"><i class="fas fa-eye text-primary mr-1"></i>Chi tiết</a>
+            <a onclick="Them1VaoGio('@item.masp')" class="btn btn-sm text-dark p-0 tuychon"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm vào giỏ</a>
+        </div>
     </div>
+</div>}}
+    </div>
+
+    <div id="load"> <b> Load More </b></div>
 
 </div>
 <!-- Products End -->
