--- a/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
@@ -42,10 +42,10 @@
             <div class="col-lg-6 col-6 text-left">
                 <form action="">
                     <div class="input-group">
-                        
+
                         <div class="input-group-append btnSearch" onclick="TimKiemTheoTen()">
                             <input type="text" class="form-control" placeholder="Tìm kiếm sản phẩm" id="timkiem">
-                            <span class="input-group-text bg-transparent text-primary" >
+                            <span class="input-group-text bg-transparent text-primary">
                                 <i class="fa fa-search" style="width: 30px"></i>
                             </span>
                         </div>
@@ -64,62 +64,63 @@
         <div class="row border-top px-xl-5" style="margin-left: -70px">
             <div class="col-lg-3 d-none d-lg-block">
                 <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
-                    <h5 class="m-2" style="color: white"><b>Danh mục sản phẩm</b></h5>                   
+                    <h5 class="m-2" style="color: white"><b>Danh mục sản phẩm</b></h5>
                 </a>
 
                 <ul class="accordion-menu" style="margin-top:0px">
                     <li>
                         <div class="dropdownlink">
-                            <h5><i class="fa fa-road" aria-hidden="true"></i> History <i class="fa fa-chevron-down" aria-hidden="true"></i></h5>                        </div>
+                            <h5><i class="fa fa-male" aria-hidden="true"></i> Đồ cá nhân <i class="fa fa-chevron-down" aria-hidden="true"></i></h5>
+                        </div>
                         <ul class="submenuItems">
-                            <li><a href="#">History book 1</a></li>
-                            <li><a href="#">History book 2</a></li>
-                            <li><a href="#">History book 3</a></li>
+                            <li><a href="#">Chăn, ra, gối, nệm</a></li>
+                            <li><a href="#">Giày dép</a></li>
+                            <li><a href="#">Nón, mũ</a></li>
+                            <li><a href="#">Quần áo</a></li>
                         </ul>
                     </li>
                     <li>
                         <div class="dropdownlink">
                             <h5>
-                                <i class="fa fa-paper-plane" aria-hidden="true"></i> Fiction
+                                <i class="fa fa-mobile" aria-hidden="true"></i> Đồ điện tử
                                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
                             </h5>
-                            
+
                         </div>
                         <ul class="submenuItems">
-                            <li><a href="#">Fiction book 1</a></li>
-                            <li><a href="#">Fiction book 2</a></li>
-                            <li><a href="#">Fiction book 3</a></li>
+                            <li><a href="#">Chuột, bàn phím, ...</a></li>
+                            <li><a href="#">Điện tử học tập</a></li>
+                            <li><a href="#">Điện tử gia dụng</a></li>
                         </ul>
                     </li>
                     <li>
                         <div class="dropdownlink">
                             <h5>
-                                <i class="fa fa-quote-left" aria-hidden="true"></i> Fantasy
+                                <i class="fa fa-bed" aria-hidden="true"></i> Nội thất
                                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
                             </h5>
                         </div>
                         <ul class="submenuItems">
-                            <li><a href="#">Fantasy book 1</a></li>
-                            <li><a href="#">Fantasy book 2</a></li>
-                            <li><a href="#">Fantasy book 3</a></li>
+                            <li><a href="#">Kệ, tủ</a></li>
+                            <li><a href="#">Bàn ghế</a></li>
+                            <li><a href="#">Đô gia dụng</a></li>
                         </ul>
                     </li>
                     <li>
                         <div class="dropdownlink">
                             <h5>
-                                <i class="fa fa-motorcycle" aria-hidden="true"></i> Action
+                                <i class="fa fa-motorcycle" aria-hidden="true"></i> Xe
                                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
                             </h5>
-                            
+
                         </div>
                         <ul class="submenuItems">
-                            <li><a href="#">Action book 1</a></li>
-                            <li><a href="#">Action book 2</a></li>
-                            <li><a href="#">Action book 3</a></li>
+                            <li><a href="#">Xe máy</a></li>
+                            <li><a href="#">Xe đạp</a></li>
                         </ul>
                     </li>
                 </ul>
-                
+
             </div>
 
 
@@ -178,6 +179,77 @@
     <script src="js/jquery-1.11.1.min.js"></script>
 </body>
 
+<!-- Footer -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="container-fluid mt-5 pt-5 ">
+    <div class="row justify-content-center row-1">
+        <div style="width:900px">
+            <h4><b>WEBSITE RAO VẶT TRỰC TUYẾN DÀNH CHO SINH VIÊN</b></h4>
+            <p>
+                Trong việc mua bán, đối với người kinh doanh có nguồn vốn ban đầu thấp, làm thế nào để vừa có được không gian bán hàng tốt vừa tiếp cận khách hàng dễ dàng mà không tốn quá nhiều chi phí cho việc chạy quảng cáo, thuê nhân viên, mặt bằng, trang trí cửa hàng, … còn đối với người tiêu dùng thì làm thế nào để dễ dàng tìm ra được một cửa hàng bán sản phẩm chất lượng, uy tín, tham khảo sản phẩm vào những thời gian rảnh rỗi mà không cần tốn quá nhiều công sức và thời gian di chuyển, chủ động trong việc thanh toán và vận chuyển.
+                Với tốc độ phát triển mạnh mẽ của công nghệ như hiện nay đã làm nâng cao chất lượng cuộc sống của con người, nhu cầu sử dụng các dịch vụ tiện ích ngày càng tăng cao. Việc mua bán truyền thống dần có những bất cập nhất định như tốn khá nhiều thời gian trong việc tìm kiếm và mua sản phẩm, giá của sản phẩm khá đắt do một số cửa hàng không sử dụng mã giảm giá, … trong khi đó mua bán online ngày càng thể hiện được những ưu điểm nổi bật như tìm kiếm thông tin sản phẩm dễ dàng, không tốn quá nhiều thời gian cho việc mua sản phẩm, có thể đặt mua sản phẩm vào bất kỳ thời gian nào và một ưu điểm nổi bật là giao hàng tận nơi, ...
+            </p>
+        </div>
+    </div>
+    <footer class="ml-xl-5 ml-md-4 ml-3 " style="margin-top:-40px">
+        <div class="row justify-content-end">
+            <div class=" col-12">
+                <div class="row pt-5">
+                    <div class="col-xl-4 col-12 mr-auto">
+                        <div class="media flex-sm-row flex-column ">
+                            <img class="align-self-center img-fluid mobile-img " src="~/template/img/LogoSV.png">
+                            
+                        </div>
+                    </div>
+                    <div class="col-xl-8 col-lg-12 col-md-12 col-sm-12 my-auto ">
+                        <div class="row justify-content-around">
+                            <div class="col-md-3 col-12 mt-md-0 mt-3">
+                                <ul class="list-unstyled text-muted">
+                                    <li>Conditions</li>
+                                    <li>Privacy</li>
+                                    <li>Imprint</li>
+                                    <li>Press</li>
+                                    <li>COntact</li>
+                                    <li>Jobs</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-3 col-12 mt-md-0 mt-3">
+                                <ul class="list-unstyled text-muted">
+                                    <li>Conditions</li>
+                                    <li>Privacy</li>
+                                    <li>Imprint</li>
+                                    <li>Press</li>
+                                    <li>COntact</li>
+                                    <li>Jobs</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-3 col-12 mt-md-0 mt-3">
+                                <ul class="list-unstyled text-muted">
+                                    <li>Credit</li>
+                                    <li>Bonitatsausktit</li>
+                                    <li>Experience</li>
+                                    <li>Tenet info</li>
+                                    <li>SCHUFA SCORE</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-auto col-12">
+                                <ul class="list-unstyled text-muted">
+                                    <li>
+                                    <li>Donwload App</li>
+                                    <li><img src="https://i.imgur.com/iU0M5wp.png" class="img-fluid app-img" width="100"></li>
+                                    <li><img src="https://i.imgur.com/M6ccl7k.png" class="img-fluid app-img" width="100"></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>               
+            </div>
+        </div>
+    </footer>
+</div>
+
+
 </html>
 
 <script>
@@ -226,6 +298,30 @@
     // Tim kiem theo loai
     function TimKiemTheoLoai(id) {
         console.log(id)
+    }
+
+    function DoCaNhan() {
+        window.location.href = '/SanPham/DoCaNhan';
+    }
+
+    function DoDienTu() {
+        window.location.href = '/SanPham/DoDienTu';
+    }
+
+    function DoNoiThat() {
+        window.location.href = '/SanPham/DoNoiThat';
+    }
+
+    function DoHocTap() {
+        window.location.href = '/SanPham/DoHocTap';
+    }
+
+    function PhuongTien() {
+        window.location.href = '/SanPham/PhuongTien';
+    }
+
+    function DoKhac() {
+        window.location.href = '/SanPham/DoKhac';
     }
 
     // Hien danh muc
